Fix cutoff shadows and triangles

--- a/docs/_sass/_style.scss
+++ b/docs/_sass/_style.scss
@@ -523,6 +523,7 @@ article {
             background: initial;
             display: block !important;
             position: static;
+            overflow: initial;
         }
         #menu-toggle{
             display: none;
